<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:id="@+id/linearBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@drawable/shape">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/text_view_quality"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="32sp"
                android:text="@string/text_view_air_quality_label"/>
        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:gravity="center_horizontal"
                    android:id="@+id/text_view_site_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/text_view_station"
                    />

                <TextView
                    android:gravity="center_horizontal"
                    android:id="@+id/text_view_pm25_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/text_view_pm25" />

                <TextView
                    android:gravity="center_horizontal"
                    android:id="@+id/text_view_time_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/text_view_time" />



            </LinearLayout>

            <LinearLayout
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:gravity="center_horizontal"
                    android:id="@+id/text_view_site"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"/>

                <TextView
                    android:gravity="center_horizontal"
                    android:id="@+id/text_view_pm25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"/>

                <TextView
                    android:gravity="center_horizontal"
                    android:id="@+id/text_view_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    />
            </LinearLayout>


        </LinearLayout>
        <lecho.lib.hellocharts.view.ColumnChartView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/columnChart"
            android:layout_height="200dp"
            android:layout_width="match_parent"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/button_get_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="Get Data"
            android:background="@drawable/custom_button"/>

        <Button
            android:id="@+id/button_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/button_settings_label"
            android:background="@drawable/custom_button"/>
    </LinearLayout>
</LinearLayout>